# leap_client_launcher

./: .gitignore  CMakeLists.txt  FIXME  README.md  build.osx.zsh
changes/: feature_osx-bundle-build
pkg/osx/: Makefile  install-tuntaposx.cocoasudo-wrapper  install-tuntaposx.osasc-wrapper  install-tuntaposx.platypus  install-tuntaposx.sh  leap-template.dmg.bz2
pkg/osx/leap-client.app/Contents/: Info.plist
pkg/osx/leap-client.app/Contents/MacOS/: leap-client
pkg/osx/leap-client.app/Contents/Resources/: cocoasudo
src/: main.cpp
